2006-01-03  Frank Ch. Eigler  <fche@redhat.com>

	PR 1144, 1379
	* tapsets.cxx (emit_probe_prologue, _epilogue): New routines.
	Call from existing derived_probe spots.  Implement soft errors in
	epilogue code.  Implement reentrancy detection in prologue code.
	(dwarf_derived_probe::emit_deregistration): Add kprobes layer
	"nmissed" to skipped_count.
	* translate.cxx (varlock): Use nsleep(TRYLOCKDELAY) in lock
	contention loop.
	(emit_module_exit): Report number of soft errors and skipped probes.
	(emit_function, _probe): Add __restrict__ marker to context pointer.
	(translate_pass): Define new MAXTRYLOCK, TRYLOCKDELAY, MAXERRORS,
	MAXSKIPPED parameters.
	* tapset/logging.stp (error): Don't stp_error, just set context state.
	* stap.1.in, stapfuncs.5.in: Document soft errors.
	* elaborate.h: Corresponding changes.

2005-12-23  Kevin Stafford  <krstaffo@us.ibm.com>

	* tapset/2.6.9-20.ELsmp/syscalls.stp: added kernel
	version tapset
	* tapset/2.6.9-20.ELsmp/i686/syscalls.stp: added kernel
	version arch specific tapset
	* tapset/doc/discrepancies.txt: log of kernel version
	discrepancies.

2005-12-22  Roland McGrath  <roland@redhat.com>

	* configure.ac: Pass LDFLAGS to elfutils configure to force DT_RUNPATH.
	* configure: Regeneraed.

2005-12-21  Josh Stone  <joshua.i.stone@intel.com>

	PR 2056
	* translate.cxx (itervar::next): emit different code for pmaps

2005-12-21  Frank Ch. Eigler  <fche@elastic.org>

	* loc2c.h: Add __attribute__ defeating code for g++ 3.3 compatibility.

2005-12-20  Josh Stone  <joshua.i.stone@intel.com>

	* vim/filetype.vim: defines *.stp files as SystemTap scripts
	* vim/ftplugin/stap.vim: sets the comment styles
	* vim/indent/stap.vim: enables simple auto-indenting
	* vim/syntax/stap.vim: defines syntax highlighting

2005-12-19  Roland McGrath  <roland@redhat.com>

	* configure.ac, systemtap.spec.in: Version 0.5.2.
	* configure: Regenerated.

2005-12-17  Roland McGrath  <roland@redhat.com>

	* staptree.h: #include <cassert> here.
