@@ -1,5 +1,9 @@
 2006-01-03  Frank Ch. Eigler  <fche@redhat.com>
 
+	* tapsets.cxx (emit_deregistration): Fix bad thinko on loop nesting.
+
+2006-01-03  Frank Ch. Eigler  <fche@redhat.com>
+
 	PR 1144, 1379
 	* tapsets.cxx (emit_probe_prologue, _epilogue): New routines.
 	Call from existing derived_probe spots.  Implement soft errors in
